[package]
name = "speed_test_example"
version = "0.1.0"
edition = "2024"

[dependencies]
matchbox_socket = { path = "../../matchbox_socket" }
log = "0.4"
futures-timer = { version = "3", features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
futures = { version = "0.3", default-features = false }
wasm-bindgen-futures = "0.4.29"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3"
tokio = { version = "1.32", features = ["rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
matchbox_signaling = { path = "../../matchbox_signaling" }
